0.20:
-----
  * Upgrade to shariff - v3.2.1
  * Fix font data path for http "/something" blog cases

0.19:
-----
  * Add per-entry social media image.

0.18:
-----

  * Remove public google+ from default 'services',
    but keep in selection for professional users.

0.17:
-----

  * Added new services

0.16:
-----

  * Update bundled shariff lib to 3.0.1
    This version uses local hosted webfonts. In order to save space
    and bandwidth, it supports .ttf, woff and .woff2 only. That means
    no support for legacy iOS (.svg) or IE < 9 (.eot).
    The CSS uses a hardcoded path "plugins/serendipity_event_social/fa/"
    to these fonts.

0.15:
-----

  * Added legal property bag information for gdpr/dsgvo

0.14:
-----

  * Fix entry fetch in special case

0.13:
-----
 * Ignore smiley's graphics for og:image
 * Use entry picture from the timeline theme if set
 * Use entry picture from the photo theme if set

0.12:
-----
 * Fix access to entry[body] for content truncation, since using
   globals was shut off either in early Serendipity 1.6 versions
   or with implementing Smarty 3 OOP with Serendipity 1.7 and up.
 * Use htmlspecialchars 3rd parameter to not double encode

0.11:
    * Re-use description set in the metadesc-plugin

0.10:
    * Strip newlines from description
    * Fix unfilled language variable TWITTERVIA_DESC
    * Work with and without @ in the twitter_via username

0.9:
    * Add option to set a fallback image for
      twitter and facebook tags

0.8:
    * set twitter card type to summary
    * Fix: Headertags were not emitted

0.7:
    * Add option to set shariff backend, to get a share
      counter for some buttons (FB, G+, ...)

0.6:
    * Set Facebook og-tags if button is active
    * Provide language selector
    * Add option to set a username for a twitter mention

0.5:
    * Add latin1 lang files (de/en)
    * Add ChangeLog

0.4:
    * Always have the info button at the end

0.3:
    * Add option + support for color themes

0.2: