@@ -169,11 +169,8 @@ class serendipity_event_social extends serendipity_event
                     break;
 
                 case 'frontend_footer':
-                    // Only emit in Single Entry Mode
-                    if (!isset($serendipity['GET']['id']) && !is_numeric($serendipity['GET']['id']) && $serendipity['view'] != 'entry') {
-                        // this script should go into the JS hook, but it has to be at the bottom to work, and the js hook places it at the top
-                        echo '<script src="' . $serendipity['serendipityHTTPPath'] . 'plugins/serendipity_event_social/shariff.min.js' . '"></script>' . "\n";
-                    }
+                    // this script should go into the JS hook, but it has to be at the bottom to work, and the js hook places it at the top
+                    echo '    <script src="' . $serendipity['serendipityHTTPPath'] . 'plugins/serendipity_event_social/shariff.min.js' . '"></script>' . "\n";
                     break;
 
                 case 'frontend_header':
